--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,6 @@
     "lint": "vite lint"
   },
   "dependencies": {
-    "next": "14.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "axios": "^1.6.0"
@@ -22,5 +21,7 @@
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.3.0"
+        "vite": "^5.0.0",
+        "@vitejs/plugin-react": "^4.2.0"
   }
 }
