--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,8 +20,8 @@
     "typescript": "^5",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
-        "vite": "^5.0.0",
+    "tailwindcss": "^3.3.0",
+    "vite": "^5.0.0",
         "@vitejs/plugin-react": "^4.2.0"
   }
 }
