--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,14 +3,15 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite dev",
-    "build": "vite build",
-    "start": "vite start",
-    "lint": "vite lint"
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "next": "^14.0.0",
     "axios": "^1.6.0"
   },
   "devDependencies": {
@@ -20,8 +21,6 @@
     "typescript": "^5",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "vite": "^5.0.0",
-        "@vitejs/plugin-react": "^4.2.0"
+    "tailwindcss": "^3.3.0"
   }
 }
